--- a/src/Components/Landing.css
+++ b/src/Components/Landing.css
@@ -1,13 +1,21 @@
+.landing {
+    height: 100vh;
+    padding-top: 6%;
+    margin-bottom: 5%;
+    margin-right: 0px;
+    padding-right: 0px;
+}
+
 .pls {
     font-family: 'Muli';
     font-size: 100%;
     font-weight: 100;
     text-transform: uppercase;
-    background-color: #bb8c86;
+    background-color: #000;
     color: #fff;
     border: none;
     /* padding: top right bottom left */
-    padding: 10px;
+    padding: 0.5% 5% 0.5% 5%;
     text-align: left;
     border-radius: 5px;
   
